[package]
name = "red"
version = "0.1.0"
authors = ["Leo Liu <auleo.liu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
anyhow = "1"
# indicatif="0.16"
regex="1"
tempfile="3"
# rayon="1"
# glob="0"
