[package]
name = "rd"
version = "0.1.2"
authors = ["Leo Liu <auleo.liu@gmail.com>"]
edition = "2018"
description = "simple utils to replace and delete text in text files"
license = "GPL-3.0"
documentation = "https://github.com/leoliu0/red"
keywords = ["text", "sed"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
anyhow = "1"
# indicatif="0.16"
regex="1"
tempfile="3"
# rayon="1"
# glob="0"
simple_logger="*"
log="*"
